PRFL-354: modified CSS to fix search result layout bug in IE
git-svn-id: https://source.sakaiproject.org/svn/profile2/trunk@81920 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile2/tool/src/webapp/css/profile2.css
+++ b/profile2/tool/src/webapp/css/profile2.css
@@ -735,10 +735,19 @@ h2 {
 
 
 /* action styles */
-.connection-actions-wrap, .search-result-actions-wrap {
+.connection-actions-wrap {
 	position: absolute;
 	top: 5px;
-	left: 300px;
+	left: 245px;
+	width: 250px;
+	font-size: 90%;
+	padding: 0;
+}
+
+.search-result-actions-wrap {
+	position: absolute;
+	top: 5px;
+	left: 270px;
 	width: 250px;
 	font-size: 90%;
 	padding: 0;
